out_utf8.txt
cargo :     Checking pdfverifier-fe v0.1.0 
(C:\Project\PdfVerifier-FE)
At line:1 char:1
+ cargo check --target wasm32-unknown-unknown 2> out.txt; 
Get-Content o ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking  
   pd...PdfVerifier-FE):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused import: `crate::ber_util`
 --> src\hashing.rs:6:5
  |
6 | use crate::ber_util;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

error[E0369]: binary operation `==` cannot be applied to 
type `Result<&[u8], lopdf::Error>`
   --> src\parser.rs:188:108
    |
188 | ...                   let is_sig_field = 
f_dict.get(b"FT").and_then(|o| o.as_name()) == 
Ok(b"Sig".as_slice());
    |                                          
------------------------------------------- ^^ 
--------------------- Result<&[u8], lopdf::Error>
    |                                          |
    |                                          
Result<&[u8], lopdf::Error>
    |
note: `lopdf::Error` does not implement `PartialEq`
   --> C:\Users\Kay Win\.cargo\registry\src\index.crates.io
-1949cf8c6b5b557f\lopdf-0.33.0\src\error.rs:5:1
    |
  5 | pub enum Error {
    | ^^^^^^^^^^^^^^ `lopdf::Error` is defined in another 
crate

warning: value assigned to `cms_der_buffer` is never read
  --> src\hashing.rs:38:30
   |
38 |     let mut cms_der_buffer = Vec::new();
   |                              ^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of 
`#[warn(unused)]`) on by default

warning: value assigned to `remaining` is never read
  --> src\ber_util.rs:23:17
   |
23 |                 remaining = &remaining[2..];
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?

For more information about this error, try `rustc 
--explain E0369`.
warning: `pdfverifier-fe` (lib) generated 3 warnings
error: could not compile `pdfverifier-fe` (lib) due to 1 
previous error; 3 warnings emitted
